src/objects/Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>We are going to use this object to activate or deactivate various triggers we will be writing so we can easily deactivate triggers in case of errors or mass upload if required.</description>
    <fields>
        <fullName>Account_Get_Generate_UUID_Version__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Get Generate UUID Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Set_Account_Primary_Member__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Set Account Primary Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampMember_updateCampaignsFieldsToLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CampMember updateCampaignsFieldsToLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampMember_updateLeadFromSplashCampaigns__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CampMember updateLeadFromSplashCampaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Owner_To_First_User_Who_Respond__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Owner To First User Who Respond</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_all_open_inbound_lead_activities__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On or off close all open inbound lead activities on tour booking.</description>
        <label>Close all open inbound lead activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_checkForDuplicateEmailId__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We will use this filed to control ContactTrigger.</description>
        <label>Contact checkForDuplicateEmailId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_directContactCreationInSF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Trigger fire when Convert Lead field on Contact is true.And call LeadConvert method to convert lead into contact if email match with existing lead</description>
        <label>Contact directContactCreationInSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_getGenerateUUIDVersion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Generate UUID Contact</description>
        <label>Contact getGenerateUUIDVersion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_setsPrimaryContactOnTheAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sets Primary Contact on the Account if Primary Contact isn&apos;t selected</description>
        <label>Contact setsPrimaryContactOnTheAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_updateAccounts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Update accounts (that will automatically set Primary Member)</description>
        <label>Contact updateAccounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Fields_From_Last_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whenever a new Opportunity gets created we need to give credit to the Source, utm and referrer of the latest opportunity created in last 60 days.</description>
        <label>Copy Fields From Last Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Deal_On_Opportunity_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create_Deal_On_Opportunity_Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Journey_Contact_On_Journey_Create__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use to turn on or off trigger for creating &apos;Journey Contact&apos; on Journey Record Create</description>
        <label>Create Journey Contact On Journey Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Journey_Contact_On_Member_Change__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Fire method to create new Journey Contact Record when primary member change on Journey objects record</description>
        <label>Create Journey Contact On Member Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deals_Set_Closed_Deal_Status_To_Blank__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Deals_Set_Closed_Deal_Status_To_Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is checked, Error level logging is turned on for Debug logs in the code so we can easily see error level logs and find the trace. In production this should be turned off unless debugging.</description>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Contact_Creation_In_SF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Trigger fire when Convert Lead field on Contact is true.And call LeadConvert method to convert lead into contact if email match with existing lead</description>
        <label>Direct Contact Creation In SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Start_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turn on/off DiscountStartDate trigger</description>
        <label>Discount Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Close_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DocuSign Close Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Building_Interests__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On or off Generate Building Interests</description>
        <label>Generate Building Interests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_setPrimaryLeadToUnqualified__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If  Journey stage is Completed-Lost then set the Primary Lead as Unqualified.</description>
        <label>Journey setPrimaryLeadToUnqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_ChangeRelatedJourneyStatus__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead_ChangeRelatedJourneyStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_ConvertLeadsToJourneys__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This trigger is use to call method &apos;ConvertLeadsToJourneys&apos; from lead converter class which conver lead into contact and opprtunity</description>
        <label>Lead ConvertLeadsToJourneys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_CopyOfficeTypeFromLeadToBuildingInt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead CopyOfficeTypeFromLeadToBuildingInt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_CreateDeleteBuildingInterest__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead CreateDeleteBuildingInterest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_DeleteBuildingInterestOnLeadDelete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead DeleteBuildingInterestOnLeadDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_SetOpprtunityStageDependsOnTour__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead SetOpprtunityStageDependsOnTour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_UpdateBuildingInterestOnLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead UpdateBuildingInterestOnLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_UpdateJourneyPrimaryContact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead_UpdateJourneyPrimaryContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reservable_Payment_Method__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turn of/off Opportunity ClosedWon Notification functionality on OpportunityTriggers</description>
        <label>Opportunity Reservable Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Upate_Encoded_ID__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity_Upate_Encoded_ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Update_for_Journey_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On or off update Journey Stage when different events occurred on tour booking</description>
        <label>Stage Update for Journey Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Call_Result_Update_Journey_NMD_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to turn on or off trigger which update NMD Next Contact Date on Task with  &quot;Call Result&quot; starting with &quot;Left VM:&quot;  or  &quot;No Answer/Busy&quot;</description>
        <label>Task Call Result Update Journey NMD Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled_Convert_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turn on/off Tour Scheduled Convert Lead functionality on Tour trigger.</description>
        <label>Tour Scheduled Convert Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Building_Interest_On_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It will update the Building Interested In lookup from Location Interested In field</description>
        <label>Update Building Interest On Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_ClosedWon_Accounts__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turn on/off Update ClosedWon Accounts functionality from Opportunity triggers</description>
        <label>Update ClosedWon Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Contact_Most_Recent_Opp_Stage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_Contact_Most_Recent_Opp_Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Deal_On_Opportunity_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_Deal_On_Opportunity_Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Journey_Stage_To_CompletedLost__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It will fire whenever Task__c Call Result field updated to Do Not Call and it change the Journey Stage to Completed-Lost</description>
        <label>Update Journey Stage To CompletedLost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Lead_From_Splash_Campaigns__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update Lead From Splash Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Most_Recent_Tour_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On or off  update most recent tour date functionality on tour trigger.</description>
        <label>Update Most Recent Tour Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Name_for_EnterpriseSolution_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <description>turn on or off oppotunity trigger for update opportunity name for Enterprise solutions.</description>
        <label>Update Name for EnterpriseSolution Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Opportunity_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_Opportunity_Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Opportunity_Primary_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update_Opportunity_Primary_Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Space_BasedOn_SpaceUUID__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_Space_BasedOn_SpaceUUID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Task_Due_Date_From_Journey_NMD__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting is use to turn on or off task trigger &apos;updateTaskDueDateToJournyNextContactDate&apos; which update task due date from Journey NMD Next Contact Date</description>
        <label>Update Task Due Date From Journey NMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Task_Owner__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use to turn on or off trigger for update ownerId for task after Insert/Update of task record.</description>
        <label>Update Task Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Tour_Enditme__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_Tour_Enditme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_WeLive_Opportunity_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update_WeLive_Opportunity_Type</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>